	  sdcc/as/link/sdld.c, sdcc/as/link/sdld.h, sdcc/as/link/lkmem.c,
	  sdcc/as/link/clean.mk, sdcc/as/link/lkrloc.c: modified
	  sdcc/as/link/lkarea.c, sdcc/as/link/readme.390, conf.mk, aslink.dsp:
	  moved from as/link/mcs51,
	  sdcc/as/link/z80, sdcc/as/link/mcs51, sdcc/as/link/hc08: removed,
	  unification of lkarea.c, one plymorphic sdld

2009-12-18 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/abs.c, device/lib/labs.c: assembler version 
	  for mcs51, other targets slightly shorter too
	* support/regression/tests/abs.c: added regression test

2009-12-17 Indy Sams < drift_solutions AT users.sourceforge.net >

	* device/lib/_strpbrk.c: fixed bug #2908537 (svn commit by Frieder)

2009-12-17 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/tests/strpbrk.c: added regression test

2009-12-16 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/include/mcs51/w7100.h: added.

2009-12-16 Borut Razem <borut.razem AT siol.net>

	* as/link/lkihx.c,
	  as/link/z80/Makefile.in, as/link/z80/linkz80.dsp,
	  as/link/z80/linkgbz80.dsp,
	  as/link/mcs51/Makefile.in, as/link/mcs51/aslink.dsp,
	  as/link/hc08/Makefile.in, as/link/hc08/link_hc08.dsp,
	  as/link/z80/lkihx.c, as/link/hc08/lkihx.c
	  as/link/mcs51/lkihx.c: unification of lkihx.c

2009-12-14 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic16devices.txt:
	  mask _XINST for 18f97j60 family, fix configword locations
	* device/include/pic16/pic18f24j50.h,
	  device/include/pic16/pic18f25j50.h,
	  device/include/pic16/pic18f44j50.h,
	  device/include/pic16/pic18f45j50.h,
	  device/include/pic16/pic18f46j50.h,
	  device/include/pic16/pic18f66j60.h,
	  device/include/pic16/pic18f66j65.h,
	  device/include/pic16/pic18f67j60.h,
	  device/include/pic16/pic18f86j60.h,
	  device/include/pic16/pic18f86j65.h,
	  device/include/pic16/pic18f87j60.h,
	  device/include/pic16/pic18f96j60.h,
	  device/include/pic16/pic18f96j65.h,
	  device/include/pic16/pic18f97j60.h: